--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,13 @@ dependencies:
   skeletonizer: ^2.1.0+1
 
   flutter_screenutil: ^5.9.0
-  flutter_gen: ^5.11.0
+  # Equality
+  equatable: ^2.0.5
   timeago:
   webview_flutter:
   flutter_svg: ^2.0.10+1
   #  auto_route: ^7.9.0
   #  go_router: ^13.2.0
-  auto_route: ^10.1.2
   overlay_support: ^2.1.0
   flutter_localization: ^0.3.3
   loading_animation_widget: ^1.2.0+4
@@ -48,7 +48,6 @@ dependencies:
   retrofit: ^4.1.0
   dartz: ^0.10.1
   # annotation
-  freezed_annotation: ^3.1.0
   pull_to_refresh: ^2.0.0
   json_annotation: ^4.8.1
   # end Core
@@ -101,18 +100,26 @@ dependencies:
   flexible_scrollbar: ^0.1.3
   intl_utils: ^2.8.8
   ####### Dev Dependencies #########
+
+  auto_route: ^10.1.2
+
 dev_dependencies:
   #  ============================ Start dev Core Package ========
   auto_route_generator: ^10.1.0
 #  very_good_analysis: ^8.0.0
   flutter_launcher_icons: ^0.14.4
   flutter_iconly:
-  freezed: ^3.2.3
-  injectable_generator: ^2.6.1
-  build_runner: ^2.7.1
-  flutter_gen_runner: ^5.11.0
   retrofit_generator: ^10.0.5
+
+  build_runner:
+  injectable_generator: ^2.4.1
+  # Asset generator
+  flutter_gen_runner:
+  # Freezed Code Generation
+  freezed: ^3.2.3
+  freezed_annotation: ^3.1.0
   json_serializable: ^6.7.1
+
 
   ####### Dependencies Overrides #########
 dependency_overrides:
@@ -124,6 +131,9 @@ dependency_overrides:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+
+
+
 flutter:
   generate: true
   uses-material-design: true
