--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   #  auto_route: ^7.9.0
   #  go_router: ^13.2.0
   overlay_support: ^2.1.0
+  internet_connection_checker: ^1.0.0
   flutter_localization: ^0.3.3
   loading_animation_widget: ^1.2.0+4
   top_snackbar_flutter: ^3.1.0
