--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   flexible_scrollbar: ^0.1.3
   intl_utils: ^2.8.8
+  marquee_widget: ^1.2.0
   ####### Dev Dependencies #########
 
   auto_route: ^10.1.2
