--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   #  go_router: ^13.2.0
   overlay_support: ^2.1.0
   internet_connection_checker: ^1.0.0
-  flutter_localization: ^0.3.3
+#  flutter_localization: ^0.3.3
   loading_animation_widget: ^1.2.0+4
   top_snackbar_flutter: ^3.1.0
-  intl: ^0.19.0
+#  intl: ^0.19.0
   #sign-qr
   hand_signature: ^3.0.3
   flutter_barcode_listener: ^0.1.4
@@ -99,7 +99,7 @@ dependencies:
   dotted_border: ^3.1.0
   pin_code_fields: ^8.0.1
   flexible_scrollbar: ^0.1.3
-  intl_utils: ^2.8.8
+#  intl_utils: ^2.8.8
   marquee_widget: ^1.2.0
   ####### Dev Dependencies #########
 
@@ -125,7 +125,7 @@ dev_dependencies:
 
   ####### Dependencies Overrides #########
 dependency_overrides:
-  intl: ^0.19.0
+#  intl: ^0.19.0
   meta: ^1.12.0
 
 
@@ -141,13 +141,15 @@ flutter:
   uses-material-design: true
 
   assets:
-    - .env.dev
+#    - .env.dev
+    - assets/translations/
     - .env.prod
     - assets/images/core/logos/
     - assets/images/core/png/
     - assets/images/core/svg/
     - assets/images/demo/png/
     - assets/images/demo/svg/
+
 
   #    - assets/fonts/arabic/
   #    - assets/fonts/english/
