--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   #  awesome_notifications: ^0.10.1
   #  device_preview: ^1.1.0
   #  FireBase
-  firebase_core:
 
   get_it: ^8.2.0
   injectable: ^2.4.0
+  calendar_date_picker2: ^2.0.1
   #Api
   curl_logger_dio_interceptor: ^1.0.0
   dio: ^5.4.2
@@ -57,7 +57,7 @@ dependencies:
   image_picker: ^1.0.7
   adaptive_action_sheet: ^2.0.3
   permission_handler: ^12.0.1
-  firebase_messaging: ^16.0.0
+#  firebase_messaging: ^16.0.0
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.2
   cached_network_image: ^3.3.1
